Fix alignment bug in users-status in dashboard Component

--- a/src/components/Dashboard/Card.scss
+++ b/src/components/Dashboard/Card.scss
@@ -69,6 +69,7 @@
 			position: relative;
 			height: 3rem;
 			line-height: 3rem;
+			text-align: center;
 
 			&::before {
 				content: "";
